19 de Marzo de 2016 Ximena Valero Modificación de las pantallas en la carpeta Novedades: -Ausentismo
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/web/Atausentismos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Atausentismos.xhtml
@@ -1290,7 +1290,7 @@
 
                         <p:commandButton id="aceptarP" value="#{msg['aceptar']}" icon="ui-icon-check" disabled="#{controlAusentismos.aceptar}" style="position: absolute; top: 185px; left: 170px; " actionListener="#{controlAusentismos.actualizarPorcentajes()}"  process="@this"/>
 
-                        <p:commandButton id="atrasP" value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" style="position: absolute; top: 185px; left: 260px; " actionListener="#{controlAusentismos.cancelarCambioEmpleados()}" process="@this"/>
+                        <p:commandButton id="atrasP" value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" style="position: absolute; top: 185px; left: 260px; " actionListener="#{controlAusentismos.cancelarCambioPorcentajes()}" process="@this"/>
 
                     </p:dialog>
 
